edited .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Bot Credentials
+# Bot Credentials (REQUIRED)
 token=
 appId=
 
-ownerId= # put the bot owner ID here
+ownerId= # put the bot owner ID here (REQUIRED)
