--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "register": "node deploy-cmds.js"
+    "register": "node deploy-cmds.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,6 @@
   },
   "devDependencies": {
     "eslint": "^9.9.1",
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.1.4"
   }
 }
