--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "dumbbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "dev": "nodemon index.js",
     "register": "node deploy-cmds.js",
-    "start": "node index.js"
+    "start": "node ."
   },
   "keywords": [],
   "author": "",
