--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "dumbbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "register": "node deploy-cmds.js",
-    "start": "node index.js"
+    "dev": "nodemon src/index.js",
+    "register": "node src/deploy-cmds.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
