--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
+  "type": "module",
   "name": "dumbbot",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon",
     "register": "node src/deploy-cmds.ts",
-    "start": "node src/index.ts"
+    "start": "ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/lodash": "^4.17.7",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "fs": "0.0.1-security",
@@ -19,10 +21,12 @@
     "random": "^4.1.0",
     "source-map-loader": "^5.0.0",
     "ts-loader": "^9.5.1",
-    "ts-node": "^10.9.2"
+    "tsc": "^2.0.4",
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
     "eslint": "^9.9.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2"
   }
 }
