--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,10 @@
 {
     "compilerOptions": {
       "outDir": "./built",
-      "allowJs": false,
-      "target": "es5"
+      "allowJs": true,
+      "esModuleInterop": true,
+      "strict": true,
+      "target": "esnext"
     },
     "include": ["./src/**/*"]
   }
