--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,17 @@
 {
-    "compilerOptions": {
-      "outDir": "./built",
-      "allowJs": true,
-      "esModuleInterop": true,
-      "strict": true,
-      "target": "esnext"
-    },
-    "include": ["./src/**/*"]
-  }
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "lib": ["esnext", "esnext.array", "esnext.asynciterable", "esnext.symbol"],
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "strict": true,
+    "noImplicitAny": false,
+    "target": "ESNEXT",
+    "baseUrl": ".",
+    "paths": {
+        "~/*": ["src/*"],
+    }
+  },
+  "include": ["src/**/*"]
+}
