--- a/package.json
+++ b/package.json
@@ -5,27 +5,51 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "dev": "nodemon",
-    "register": "node src/deploy-cmds.ts",
-    "start": "tsc src/index.ts"
+    "build:clean": "del-cli dist",
+    "build:check": "tsc --noEmit",
+    "build:esm": "swc ./src --out-dir ./dist",
+    "build": "pnpm build:clean && pnpm build:check && pnpm build:esm",
+    "lint": "prettier --check . && eslint src --ext ts",
+    "format": "prettier --write . && eslint src --ext ts --fix",
+    "fmt": "pnpm format",
+    "start": "env-cmd node --enable-source-maps dist/index.js",
+    "start:dev": "npm run build && npm run dev",
+    "dev": "env-cmd node --enable-source-maps dist/index.js",
+    "deploy:commands": "env-cmd node --enable-source-maps dist/deploy.js",
+    "postinstall": "is-ci || husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "@types/lodash": "^4.17.7",
-    "discord.js": "^14.15.3",
-    "dotenv": "^16.4.5",
-    "fs": "0.0.1-security",
-    "path": "^0.12.7",
-    "random": "^4.1.0",
-    "source-map-loader": "^5.0.0",
-    "ts-loader": "^9.5.1"
-  },
-  "devDependencies": {
-    "eslint": "^9.9.1",
-    "nodemon": "^3.1.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+	"dependencies": {
+		"@ltd/j-toml": "^1.38.0",
+		"@swc/helpers": "^0.5.1",
+		"@yuudachi/framework": "^0.2.10",
+		"dayjs": "^1.11.5",
+		"discord.js": "^14.13.0",
+		"env-cmd": "^10.1.0",
+		"kleur": "^4.1.5",
+		"pino": "^8.11.0",
+		"prettier": "^2.7.1",
+		"readdirp": "^3.6.0",
+		"reflect-metadata": "^0.1.13",
+		"tsyringe": "^4.8.0",
+		"undici": "^5.23.0"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^17.6.5",
+		"@commitlint/config-angular": "^17.6.5",
+		"@swc/cli": "^0.1.57",
+		"@swc/core": "^1.3.5",
+		"@types/node": "^18.8.3",
+		"@types/prettier": "^2.7.2",
+		"del-cli": "^5.0.0",
+		"eslint": "^8.48.0",
+		"eslint-config-neon": "0.1.54",
+		"husky": "^8.0.1",
+		"is-ci": "^3.0.1",
+		"lint-staged": "^13.2.2",
+		"rimraf": "^3.0.2",
+		"typescript": "^5.1.6"
   }
 }
